[gd_scene load_steps=5 format=3 uid="uid://kvpvbpifrpmd"]

[ext_resource type="Script" path="res://level/level.gd" id="1_vncig"]
[ext_resource type="Resource" uid="uid://c3qgddwluyyjt" path="res://cells/cell_map.tres" id="2_u510b"]
[ext_resource type="TileSet" uid="uid://cph523pgbiqxx" path="res://default_tileset.tres" id="3_1dan6"]
[ext_resource type="Script" path="res://levels/level_select.gd" id="5_n0tvi"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("tilemap")]
script = ExtResource("1_vncig")
tilemap = NodePath("TileMap")
cell_map = ExtResource("2_u510b")
main_menu = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-24, -24)
scale = Vector2(3, 3)
tile_set = ExtResource("3_1dan6")
format = 2
layer_0/name = "Collision"
layer_0/tile_data = PackedInt32Array(-65542, 0, 1, -6, 0, 1, 65530, 0, 1, -65540, 0, 1, -4, 0, 1, 65532, 0, 1, 262140, 0, 1, 327676, 0, 1, 262141, 65536, 0, 327677, 0, 1, -2, 0, 1, 65534, 0, 1, -131072, 0, 1, -65536, 0, 1, 0, 0, 1, -131070, 0, 1, -65534, 0, 1, 2, 0, 1, -196604, 0, 1, -131068, 0, 1, -65532, 0, 1, 4, 0, 1, 196612, 0, 1, 262148, 0, 1, -131078, 0, 1, -196613, 0, 1, -65541, 0, 1, -131076, 0, 1, 196604, 0, 1, 196605, 0, 1, -196610, 0, 1, -65538, 0, 1, 196606, 0, 1, 327678, 0, 1, 196607, 0, 1, 327679, 0, 1, -196608, 0, 1, 131072, 0, 1, 262144, 0, 1, -262143, 0, 1, -131071, 0, 1, 131073, 0, 1, 262145, 0, 1, -196606, 0, 1, 131074, 0, 1, 262146, 0, 1, 131075, 0, 1, 262147, 0, 1, -262140, 0, 1, 131076, 0, 1, -262139, 0, 1, -131067, 0, 1, 5, 0, 1, -196602, 0, 1, -65530, 0, 1)
layer_1/name = "Collisionless"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(196611, 65536, 1)
layer_2/name = "Wall Visuals"
layer_2/tile_data = PackedInt32Array(196604, 1, 0, 131076, 131073, 0, 262148, 131073, 1, 327676, 1, 1, 196605, 65537, 0, 196606, 65537, 0, 196607, 65537, 0, 131072, 65537, 0, 131073, 65537, 0, 131074, 65537, 0, 131075, 65537, 0, 327677, 65537, 0, 327678, 65537, 0, 327679, 65537, 0, 262144, 65537, 0, 262145, 65537, 0, 262146, 65537, 0, 262147, 65537, 0, 196612, 131073, 2, 262140, 131073, 2)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Level Selection UI" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_n0tvi")

[node name="Panel" type="Panel" parent="Level Selection UI"]
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 580.0
offset_bottom = 324.0

[node name="01" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 335.0
offset_top = 234.0
offset_right = 415.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "01"

[node name="02" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 435.0
offset_top = 234.0
offset_right = 515.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "02"

[node name="03" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 535.0
offset_top = 234.0
offset_right = 615.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "03"

[node name="04" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 635.0
offset_top = 234.0
offset_right = 715.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "04"

[node name="05" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 735.0
offset_top = 234.0
offset_right = 815.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "05"

[node name="06" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 335.0
offset_top = 334.0
offset_right = 415.0
offset_bottom = 414.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "06"

[node name="07" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 435.0
offset_top = 334.0
offset_right = 515.0
offset_bottom = 414.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "07"

[node name="08" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 535.0
offset_top = 334.0
offset_right = 615.0
offset_bottom = 414.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "08"

[node name="09" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 635.0
offset_top = 334.0
offset_right = 715.0
offset_bottom = 414.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "09"

[node name="10" type="Button" parent="Level Selection UI/Panel"]
layout_mode = 0
offset_left = 735.0
offset_top = 334.0
offset_right = 815.0
offset_bottom = 414.0
theme_override_colors/font_color = Color(0.858824, 1, 0.921569, 1)
theme_override_font_sizes/font_size = 48
text = "10
"

[connection signal="level_finished" from="." to="Level Selection UI" method="_on_level_level_finished"]
[connection signal="pressed" from="Level Selection UI/Panel/01" to="Level Selection UI" method="_on_01_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/02" to="Level Selection UI" method="_on_02_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/03" to="Level Selection UI" method="_on_03_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/04" to="Level Selection UI" method="_on_04_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/05" to="Level Selection UI" method="_on_05_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/06" to="Level Selection UI" method="_on_06_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/07" to="Level Selection UI" method="_on_07_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/08" to="Level Selection UI" method="_on_08_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/09" to="Level Selection UI" method="_on_09_pressed"]
[connection signal="pressed" from="Level Selection UI/Panel/10" to="Level Selection UI" method="_on_10_pressed"]
